finally my e-school complete

--- a/index.html
+++ b/index.html
@@ -95,6 +95,133 @@
             </div>
           </div>
         </div>
+
+        <div class="container center">
+            <h1>Online Courses</h1>
+            <div class="card-deck">
+                <div class="card">
+                  <img src="Photos/Morder pyschology.png" class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title title">Modern Psychology</h5>
+                    <p class="card-text">Designation</p>
+                    <button class="cbutton">Buy course</button>
+                  </div>
+                  <div class="card-footer">
+                    <div class="card-icon">
+                        <div class="inleft">
+                          <img src="ICON/calendar.png" alt="" class="img-fluidd">
+                          <p>Start 20 April, 2021</p>
+                        </div>
+                        <div class="inleft">
+                          <img src="ICON/people.png" alt="" class="img-fluidd">
+                          <p>60 seats</p>
+                        </div>
+                      </div>
+                  </div>
+                </div>
+                <div class="card">
+                  <img src="Photos/Morder psyc.png" class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title title">Modern Psychology</h5>
+                    <p class="card-text">Designation</p>
+                    <button class="cbutton">Buy course</button>
+                  </div>
+                  <div class="card-footer">
+                    <div class="card-icon">
+                        <div class="inleft">
+                          <img src="ICON/calendar.png" alt="" class="img-fluidd">
+                          <p>Start 20 April, 2021</p>
+                        </div>
+                        <div class="inleft">
+                          <img src="ICON/people.png" alt="" class="img-fluidd">
+                          <p>60 seats</p>
+                        </div>
+                      </div>
+                  </div>
+                </div>
+                <div class="card">
+                  <img src="Photos/Morder pychons.png" class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title title">Modern Psychology</h5>
+                    <p class="card-text">Designation</p>
+                    <button class="cbutton">Buy course</button>
+                  </div>
+                  <div class="card-footer">
+                    <div class="card-icon">
+                        <div class="inleft">
+                          <img src="ICON/calendar.png" alt="" class="img-fluidd">
+                          <p>Start 20 April, 2021</p>
+                        </div>
+                        <div class="inleft">
+                          <img src="ICON/people.png" alt="" class="img-fluidd">
+                          <p>60 seats</p>
+                        </div>
+                      </div>
+                  </div>
+                </div>
+              </div>
+
+        </div>
+
+        
+       <div class="container newtm">
+           <h1>Testimonial</h1>
+           <div class="retake">
+            <div class="ironman">
+              <img src="Photos/Man.png" class="img-fluid" alt="">
+            </div>
+            <div class="testimonial-text">
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis assumenda id dolor incidunt molestias atque aliquid perferendis officia. Amet vero tempore debitis </p>
+            </div>
+          </div>
+
+
+       </div>
+
+   
+       <footer class="last">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-4">
+              <p>Millions of people of all ages and from aroundthe world are improving </p>
+            </div>
+            <div class="col-md-3">
+              <ul>
+                <li>Course</li>
+                <li><a href="">Graphic Design</a></li>
+                <li><a href="">Web Design</a></li>
+                <li><a href="">Engineering</a></li>
+                <li><a href="">Marketing</a></li>
+                <li><a href="">Business</a></li>
+              </ul>
+            </div>
+            <div class="col-md-3">
+              <ul>
+                <li>Terms</li>
+                <li><a href="">Graphic Design</a></li>
+                <li><a href="">Web Design</a></li>
+                <li><a href="">Engineering</a></li>
+                <li><a href="">Marketing</a></li>
+                <li><a href="">Business</a></li>
+              </ul>
+            </div>
+            <div class="col-md-2">
+              <ul>
+                <li>Useful Link</li>
+                <li><a href="">Graphic Design</a></li>
+                <li><a href="">Web Design</a></li>
+                <li><a href="">Engineering</a></li>
+                <li><a href="">Marketing</a></li>
+                <li><a href="">Business</a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="footer-bottom">
+            <p class="pt-5 text-center">Copyright © 2020 Touhidul Hoque Creations</p>
+          </div>
+        </div>
+      </footer>
+  
       
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
